--- a/staff/francesc-destruels/duck-app/index.html
+++ b/staff/francesc-destruels/duck-app/index.html
@@ -15,6 +15,12 @@
     <script src="vendor/react/16.8.6/react-dom.development.js"></script>
     <script src="vendor/babel/7.4.3/babel.js"></script>
 
+    <script src="scripts/validate.js"></script>
+    <script src="scripts/errors.js"></script>
+    <script src="scripts/normalize.js"></script>
+
+    <script src="./scripts/user-api/index.js"></script>
+    <script src="./scripts/duck-api/index.js"></script>
     <script src="scripts/logic.js"></script>
     <script type="text/babel" src="scripts/main.jsx"></script>
 </body>
