--- a/staff/francesc-destruels/duck-app/index.html
+++ b/staff/francesc-destruels/duck-app/index.html
@@ -21,8 +21,8 @@
     <script src="scripts/normalize/index.js"></script>
 
     <!-- business logic and data services -->
-    <script src="scripts/duck-api/index.js"></script>
-    <script src="scripts/user-api/index.js"></script>
+    <script src="scripts/data/duck-api/index.js"></script>
+    <script src="scripts/data/user-api/index.js"></script>
     <script src="scripts/logic/index.js"></script>
     <script src="scripts/i18n.js"></script>
 
@@ -30,6 +30,7 @@
     <script type="text/babel" src="scripts/components/app.jsx"></script>
     <script type="text/babel" src="scripts/components/language-selector.jsx"></script>
     <script type="text/babel" src="scripts/components/landing.jsx"></script>
+    <script type="text/babel" src="scripts/components/register.jsx"></script>
     <script type="text/babel" src="scripts/components/login.jsx"></script>
     <script type="text/babel" src="scripts/components/home.jsx"></script>
     <script type="text/babel" src="scripts/main.jsx"></script>
