--- a/staff/francesc-destruels/duck-app/index.html
+++ b/staff/francesc-destruels/duck-app/index.html
@@ -16,15 +16,15 @@
     <script src="vendor/babel/7.4.3/babel.js"></script>
 
     <!-- common -->
-    <script src="scripts/errors.js"></script>
-    <script src="scripts/validate/index.js"></script>
-    <script src="scripts/normalize/index.js"></script>
+    <script src="scripts/common/errors.js"></script>
+    <script src="scripts/common/validate/index.js"></script>
+    <script src="scripts/common/normalize/index.js"></script>
+    <script src="scripts/common/i18n.js"></script>
 
     <!-- business logic and data services -->
     <script src="scripts/data/duck-api/index.js"></script>
     <script src="scripts/data/user-api/index.js"></script>
     <script src="scripts/logic/index.js"></script>
-    <script src="scripts/i18n.js"></script>
 
     <!-- presentation -->
     <script type="text/babel" src="scripts/components/app.jsx"></script>
@@ -33,6 +33,8 @@
     <script type="text/babel" src="scripts/components/register.jsx"></script>
     <script type="text/babel" src="scripts/components/login.jsx"></script>
     <script type="text/babel" src="scripts/components/home.jsx"></script>
+    <script type="text/babel" src="scripts/components/search.jsx"></script>
+    <script type="text/babel" src="scripts/components/results.jsx"></script>
     <script type="text/babel" src="scripts/main.jsx"></script>
 </body>
 
