--- a/staff/francesc-destruels/duck-app/index.html
+++ b/staff/francesc-destruels/duck-app/index.html
@@ -20,6 +20,7 @@
     <script src="scripts/common/validate/index.js"></script>
     <script src="scripts/common/normalize/index.js"></script>
     <script src="scripts/common/i18n.js"></script>
+    <script src="scripts/common/call/index.js"></script>
 
     <!-- business logic and data services -->
     <script src="scripts/data/duck-api/index.js"></script>
